first running, failed

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -13,8 +13,38 @@
 	<p id="target"></p>
 
 	<!-- The transpiled output of the QuickStart.java source file (mvn generate-sources) -->
-	<script type="text/javascript"
-		src="../target/js/quickstart/QuickStart.js"></script>
+	<!-- <script type="text/javascript"
+		src="target/js/quickstart/QuickStart.js"></script> -->
 
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/LuaTable.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/LocVar.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/Proto.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/Loader.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/Expdesc.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/BlockCnt.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/LuaJavaCallback.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/Syntax.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/LuaFunction.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/FromReader.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/LuaInternal.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/UpVal.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/LuaUserdata.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/LuaError.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/StringReader.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/Debug.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/CallInfo.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/Lua.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/PackageLib.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/MathLib.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/BaseLibReader.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/DumpedInput.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/BaseLib.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/FuncState.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/OSLib.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/TableLib.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/StringLib.js"></script>
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/lua/IOLib.js"></script>
+
+	<script type="text/javascript" src="target/js/com/iteye/weimingtom/metamorphose/test/Test001.js"></script>
 </body>
 </html>
